# basic-rust

./: .gitignore  Cargo.toml
.cargo/: config
exercises/advanced/: Cargo.toml
exercises/advanced/src/: lib.rs  main.rs
exercises/advanced/src/adv_macros/: mod.rs  struct_data_adv.rs  util_func.rs
exercises/advanced/src/macros/: mod.rs  struct_data.rs
exercises/bench_app/: Cargo.toml
exercises/bench_app/benches/: loop_bench.rs
exercises/gui/: Cargo.toml
exercises/gui/src/: druid.rs  main.rs
exercises/io/: Cargo.toml
exercises/io/src/: basic_io.rs  bench.rs  bench_unsafe.rs  lib.rs
exercises/macros/: Cargo.toml
exercises/macros/src/: lib.rs  main.rs
exercises/macros/src/adv_macros/: mod.rs  struct_data_adv.rs  util_func.rs  util_struct.rs
exercises/macros/src/macros/: mod.rs
exercises/ml/: Cargo.toml
exercises/ml/src/: decision_tree.rs  lib.rs  matrix.rs  nd_array.rs  ndarray.rs  number_utils.rs  plot.rs  touch.rs
exercises/network/: Cargo.toml  config.toml
exercises/network/src/: configuration.rs  lib.rs  tcp_client_async.rs  tcp_server_async.rs  udp_client_async.rs  udp_server_async.rs
exercises/security/: Cargo.toml
exercises/security/src/: common.rs  cryptography.rs  digital_signature.rs  key_agreement.rs  lib.rs  main.rs  message_digest.rs  pki.rs
exercises/security/src/openssl/: cryptography.rs  digital_signature.rs  key_agreement.rs  message_digest.rs  mod.rs  pki.rs
exercises/struct/: Cargo.toml
exercises/struct/src/: basic_struct.rs  basic_struct_transform.rs  basic_struct_transform_safe.rs  lib.rs
exercises/syntax/src/: basic_collection.rs  basic_lifetime.rs  lib.rs
exercises/thread/: Cargo.toml
exercises/thread/src/: basic_thread.rs  basic_thread_async.rs  basic_thread_broadcast.rs  basic_thread_sync.rs  lib.rs  tokio_async.rs  tokio_semaphore.rs  tokio_semaphore_2.rs  tokio_sync.rs
exercises/utils/: Cargo.toml
exercises/utils/src/: common_utils.rs  lib.rs
exercises/utils/src/error/: app_error.rs
exercises/utils/src/format/: bigdecimal_format.rs  date_format.rs  mod.rs
exercises/utils/src/log/: configuration.rs
exercises/utils/src/serde/: mod.rs  vector_serde.rs
exercises/web/: .env.dev  .env.test  Cargo.toml  web_1.md  web_2.md
exercises/web/src/: lib.rs  main.rs  user_schema.rs
exercises/web/src/dto/: mod.rs  test_dto.rs
exercises/web/src/models/: mod.rs  sample_rec.rs  test_rec.rs  user.rs
exercises/web/src/persistence/: common.rs  mod.rs  sample_rec_persistence.rs  sample_rec_persistence_async.rs  test_rec_persistence.rs  user_persistence.rs
exercises/web/src/utils/: boot.rs  macros.rs  mod.rs
exercises/web/tests/: lib.rs
exercises/web/tests/persistence/: mod.rs  test_common.rs  test_sample_rec_persistence.rs  test_sample_rec_persistence_async.rs  test_user_persistence.rs
