[package]
name = "gui"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "gui"
#path = "src/mod"
##crate-type = ["rlib", "dylib", "staticlib"]
#crate-type = ["rlib", "dylib"]

[[bin]]
name = "gui"
path = "src/main.rs"


[dependencies]
utils = { path = "../utils" }
chrono = "^0"
rand = "^0"
tokio = { version = "^1", features = ["time", "rt-multi-thread", "sync", "rt", "macros"] }
async-std = "^1"
async-channel = "^2"
log = "^0"
druid = "^0"

