[package]
name = "io"
version = "0.1.0"
edition = "2021"

[profile.bench]
opt-level = 3           # "s", "z" or 0-3
lto = true              # Link Time Optimization enabled
codegen-units = 1       # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "abort"         # abort or unwind - unwind for trace the errors
strip = true            # remove debug mode
overflow-checks = false # remove check overflow

[dependencies]
utils = { path = "../utils" }
rayon = "^1"
num_cpus="^1"
log = "0.4.27"