[package]
name = "io"
version = "0.1.0"
edition = "2021"

[lib]
name = "io"
path = "src/lib.rs"
crate-type = ["dylib"]

[profile.bench]
opt-level = 3           # "s", "z" or 0-3
lto = true              # Link Time Optimization enabled
codegen-units = 1       # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "abort"         # abort or unwind - unwind for trace the errors
strip = true            # remove debug mode
overflow-checks = false # remove check overflow



[dependencies]
utils = { path = "../utils" }
chrono = "^0"
rayon = "^1"
num_cpus = "^1"
tracing = "^0"
