[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "ml"
path = "src/lib.rs"
crate-type = ["rlib", "dylib", "staticlib"]

# [[bin]]
# name = "my_app"
# path = "src/main.rs"

# [[bin]]
# name = "other_app"
# path = "src/bin/other.rs"

[dependencies]
utils = { path = "../utils" }
maplit = "^1"
ndarray = "^0"
rand = "^0"
linfa = "^0"
#linfa-datasets = "^0"
linfa-preprocessing = "^0"
smartcore = "^0"
plotters="^0"
log = "0.4.27"
winit="^0"
pixels="^0"