[package]
name = "ml"
version = "0.1.0"
edition = "2021"

[lib]
name = "ml"
path = "src/lib.rs"
crate-type = ["rlib", "dylib", "staticlib"]

# [[bin]]
# name = "my_app"
# path = "src/main.rs"

# [[bin]]
# name = "other_app"
# path = "src/bin/other.rs"

[profile.dev]
opt-level = 0            # "s", "z" or 0-3
lto = false              # Link Time Optimization enabled
codegen-units = 16       # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "unwind"         # abort or unwind - unwind for trace the errors
strip = false            # remove debug mode

[profile.fast-debug]
inherits = "dev"
opt-level = 1           # "s", "z" or 0-3
lto = false             # Link Time Optimization enabled
codegen-units = 16      # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "unwind"        # abort or unwind - unwind for trace the errors
strip = false           # remove debug mode

[profile.release]
opt-level = 3           # "s", "z" or 0-3
lto = true              # Link Time Optimization enabled
codegen-units = 1       # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "abort"         # abort or unwind - unwind for trace the errors
strip = true            # remove debug mode
overflow-checks = false # remove check overflow

[profile.bench]
opt-level = 3           # "s", "z" or 0-3
lto = true              # Link Time Optimization enabled
codegen-units = 1       # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "abort"         # abort or unwind - unwind for trace the errors
strip = true            # remove debug mode
overflow-checks = false # remove check overflow

[dependencies]
utils = { path = "../utils" }
maplit = "^1"
rayon="^1"
ndarray = "^0"
tract-tensorflow = "^0"
rand = "^0"
linfa = "^0"
#linfa-datasets = "^0"
linfa-preprocessing = "^0"
smartcore = "^0"
plotters="^0"
log = "0.4.27"
winit="^0"
pixels="^0"
tract-onnx = "^0"