[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
base64-stream = "^4"
log = "^0"
openssl = "^0"
#rand = "^0"
libc = "^0"
anyhow = "^1"

bytes = "^1"
aes = "^0"
cbc = "^0"
ctr = "^0"
aes-gcm = "^0"
p256 = { version = "^0", features = ["ecdsa", "sha256"] }
#k256 = { version = "^0", features = ["ecdsa", "sha256"] }
rand_core = { version = "^0", features = ["getrandom"] }
pem = "^3"
generic-array = "1.2.0"

