[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
base64-stream = "^4"
hex = "^0"
log = "^0"
openssl = "^0"
#rand = "^0"
libc = "^0"
anyhow = "^1"

aes = "^0"
cbc = "^0"
ctr = "^0"
#aes-gcm = { version = "^0", features = ["aes", "stream"] }
aes-gcm-stream = "^0"
p256 = { version = "^0", features = ["ecdsa", "sha256"] }
#k256 = { version = "^0", features = ["ecdsa", "sha256"] }
rand_core = { version = "^0", features = ["getrandom"] }
pem = "^3"
generic-array = "1.2.0"
cipher = "0.4.4"

