[package]
name = "security"
version = "0.1.0"
edition = "2021"

[lib]
name = "security"
path = "src/lib.rs"
crate-type = ["rlib", "dylib", "staticlib"]

[[bin]]
name = "security"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
base64-stream = "^4"
hex = "^0"
tracing = "^0"
openssl = "^0"
#rand = "^0"
libc = "^0"
anyhow = "^1"

sha2 = "^0"
sha3 = "^0"
hmac = "^0"
pbkdf2 = "^0"

aes = "^0"
cbc = "^0"
ctr = "^0"
#aes-gcm = { version = "^0", features = ["aes", "stream"] }
aes-gcm-stream = "^0"

p256 = { version = "^0", features = ["ecdsa", "sha256"] }
k256 = { version = "^0", features = ["ecdsa", "sha256"] }
rand_core = { version = "^0", features = ["getrandom"] }
pem = "^3"
generic-array = "1.2.0"
cipher = "0.4.4"

