[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "^1", features = ["time", "rt-multi-thread", "sync", "rt", "macros"]}
async-channel = "^2"
log = "^0"
toml = "^0"
env_logger = "^0"
once_cell = "^1"
serde = { version = "^1", features = ["derive"] }
chrono = "^0"
axum="^0"
diesel="^1"
r2d2="^0"