[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "^1", features = ["time", "rt-multi-thread", "sync", "rt", "macros"]}
tokio-postgres = { version = "^0", features = ["with-uuid-0_8","with-chrono-0_4"] }
tokio-stream = "^0"
bb8 = "^0"
bb8-postgres = "^0"
#async-channel = "^2"
log = "^0"
#toml = "^0"
env_logger = "^0"
#once_cell = "^1"
#serde = { version = "^1", features = ["derive"] }
chrono = { version = "^0", features = ["serde"] }
axum="^0"
diesel={ version = "^2", features = ["postgres", "chrono", "r2d2"] }
#r2d2="^0"
#time="^0"
dotenvy="^0"
once_cell = "^1"
anyhow="^1"
serde = { version = "^1", features = ["derive"] }
#mapper="^1"
