[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "web"
path = "src/main.rs"

#[profile.dev]
#rustflags = [
#    "-A", "dead_code",
#    "-A", "unused_imports",
#    "-D", "warnings"
#]

[profile.dev]
opt-level = 0               # "s", "z" or 0-3
lto = false                 # Link Time Optimization enabled
codegen-units = 16          # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "unwind"            # abort or unwind - unwind for trace the errors
debug = "full"              # debug mode

[profile.fast_debug]
inherits = "dev"
opt-level = 1               # "s", "z" or 0-3

[profile.test]
inherits = "dev"
opt-level = 3
panic = "abort"

[profile.release]
opt-level = 3               # "s", "z" or 0-3
lto = true                  # Link Time Optimization enabled
codegen-units = 1           # build slower, code is more optimized (more is building faster, less is more optimized)
panic = "abort"             # abort or unwind - unwind for trace the errors
debug = "line-tables-only"  # remove debug mode, keep the filename and line of code, set to 1
overflow-checks = false     # remove check overflow

[profile.bench]
inherits = "release"

[dependencies]
utils = { path = "../utils" }
macros = { path = "../macros" }
paste = "^1"
#log = "^0"
tracing = "^0"
tokio = { version = "^1", features = ["time", "rt-multi-thread", "sync", "rt", "macros"] }
tokio-postgres = { version = "^0", features = ["with-uuid-0_8", "with-chrono-0_4"] }
tokio-stream = "^0"
bb8 = "^0"
bb8-postgres = "^0"
#async-channel = "^2"

#toml = "^0"
#env_logger = "^0"
#once_cell = "^1"
#serde = { version = "^1", features = ["derive"] }
chrono = { version = "^0", features = ["serde"] }
#axum = "^0"
diesel = { version = "^2", features = ["postgres", "chrono", "r2d2"] }
#r2d2="^0"
#time="^0"
dotenvy = "^0"
once_cell = "^1"
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
#mapper="^1"
